<resources>
    <string name="app_name">GymS</string>
    <string name="start_training_button">Start new training</string>
    <string name="training_text_view">Training #</string>
    <string name="training_time_text_view">Training time:</string>
    <string name="clarification_time_text_view">in minutes</string>
    <string name="scheme_text_view">Scheme:</string>
    <string name="training_process">In Process</string>
    <string name="save_button">Save</string>
    <string name="finish_training_button">Finish</string>
    <string name="exercise_progress_hint">28 times</string>
    <string name="number_format_error">You must enter a number</string>
</resources>