<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="2dp"
    app:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/brown_100"
        android:padding="4dp">

        <TextView
            android:id="@+id/trainingTextView"
            style="@style/TrainingItemStyle_Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/training_text_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/trainingNumber"
            style="@style/TrainingItemStyle_Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/trainingTextView"
            app:layout_constraintTop_toTopOf="@id/trainingTextView"
            tools:text="1" />

        <TextView
            android:id="@+id/duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="37" />

        <TextView
            android:id="@+id/durationTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:text="@string/training_time_text_view"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@id/duration"
            app:layout_constraintTop_toTopOf="@id/duration" />

        <TextView
            android:id="@+id/clarificationTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clarification_time_text_view"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@id/durationTextView"
            app:layout_constraintTop_toBottomOf="@id/durationTextView" />

        <TextView
            android:id="@+id/schemeTextView"
            style="@style/TrainingItemStyle_Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/scheme_text_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/trainingTextView" />

        <TextView
            android:id="@+id/trainingScheme"
            style="@style/TrainingItemStyle_Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/schemeTextView"
            app:layout_constraintTop_toTopOf="@id/schemeTextView"
            tools:text="Arms" />

        <TextView
            android:id="@+id/trainingProcess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/training_process"
            android:textColor="@color/light_brown_200"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/schemeTextView" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
